[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PdeImageDenoising"
version = "0.1.0"
description = "PDE-based image denoising"
requires-python = ">=3.10"
dependencies = [
    "imageio",
    "matplotlib",
    "kaggle",
    "scipy",
    "numpy",
]
[tool.setuptools]
packages = ["src"]

